classDiagram
    direction LR

    %% --- StateMachineModule (jojo_state_machine.py) ---
    class JoJoState {
        <<enumeration>>
        CONFIG_LOAD
        UI_INIT
        INDUSTRY_PROCESS
        DATA_FETCH
        VALUATION
        FILTERING
        RESULTS_DISPLAY
        ERROR 
        IDLE 
        # EXPORT and END are not currently implemented or used in the state machine
    }

    class State {
        <<Abstract>>
        +context dict
        +machine JoJoStateMachine
        +execute() void
    }

    class ConfigLoadState
    class UiInitState
    class IndustryProcessState
    class DataFetchState
    class ValuationState
    class FilteringState
    class ResultsDisplayState
    %% class ExportState %% Not yet implemented
    class ErrorState
    class IdleState   
    %% Added IDLE state
    %% class EndState %% Not yet implemented

    ConfigLoadState --|> State
    UiInitState --|> State
    IndustryProcessState --|> State
    DataFetchState --|> State
    ValuationState --|> State
    FilteringState --|> State
    ResultsDisplayState --|> State
    %% ExportState --|> State
    ErrorState --|> State
    IdleState --|> State 
    %% Added IDLE state inheritance

    class JoJoStateMachine {
        +current_state JoJoState
        +context dict
        +__init__() void
        +transition_to(next_state JoJoState) void
        +execute_state() void
    }
    JoJoStateMachine o-- JoJoState : "current_state"
    JoJoStateMachine *-- State : "uses state objects" # Changed from manages to uses for clarity

    %% --- AppModule (app.py) ---
    class StreamlitApp {
        <<Streamlit Script>>
        -machine JoJoStateMachine
        +render_ui()
        +handle_user_interaction()
    }
    StreamlitApp ..> JoJoStateMachine : creates & drives

    %% --- DataHandlerModule (data_handler.py) ---
    class DataHandler_Functions {
        <<Module Functions>>
        +get_all_companies_basic_data(context) list
        +filter_industry_stocks(selected_industry_name, name_to_code_map, all_companies_data) list
        # +get_financial_reports_for_stock(stock_detail, context) tuple # This was for old TWSE API
        # +fetch_stock_financials_from_downloaded(stock_code, api_suffix, downloaded_reports) dict # This was for old TWSE API
        +fetch_finmind_financial_statement_data(stock_id str, start_date str, statement_type str) DataFrame
        +extract_finmind_items(df DataFrame, target_items_map dict, report_date_str str, max_lookback_periods int) dict
        +fetch_finmind_stock_price(stock_id str, target_date_str str) float
        +calculate_dcf_valuation(stock_code str, financials dict, risk_preference float, context dict) dict
    }
    DataFetchState ..> DataHandler_Functions : uses
    ValuationState ..> DataHandler_Functions : uses
    ConfigLoadState ..> DataHandler_Functions : uses (for get_all_companies_basic_data)

    %% --- ConfigurationFiles ---
    class industries_json {
        <<JSON File>>
        industries: list
        default_risk_premium: float
        risk_premium_options: dict
    }
    class env_file {
        <<.env File>>
        API_KEY_XXX (example)
    }
    ConfigLoadState ..> industries_json : reads
    ConfigLoadState ..> env_file : reads (via dotenv)
    
    note for DataHandler_Functions "Contains functions for API interaction and data processing."
    note for StreamlitApp "Main Streamlit application script that orchestrates UI and state machine."
